--- a/index.html
+++ b/index.html
@@ -56,138 +56,140 @@
         </div>
     </header>
     <div id="top"></div>
-    <main class="flex-fill cprimary primary bg z-0 py-0 px-4 px-md-0 overflow-y-auto overflow-x-hidden position-relative" id="main-content">
-        <div class="h-100 w-100 overflow-hidden position-absolute d-none d-lg-block ignore-unshow z-n1">
-            <div data-follow="1" class="abs cir50px blur100px white overflow-hidden"></div>
-        </div>
-        <div class="container h-100" id="home">
-            <div class="row align-items-center h-100 row-cols-1 row-cols-md-2">
-                <div class="col text-center text-md-start d-md-flex flex-md-row">
-                    <div>
-                        <h1 class="fw-bolder">Hi, I'm dinnoyow.</h1>
-                        <p>I'm an artist and a developer, and you're now on my website. You can find my <a href="#about" onclick="show('about')">thoughts</a>, <a href="#gallery" onclick="show('gallery')">art and animations</a>, and <a href="#leafboard" onclick="show('leafboard')">projects</a> in this website.</p>
-                        <div class="social-medias d-flex justify-content-center justify-content-md-start"></div>
-                    </div>
-                    <div class="d-none d-md-block p-lg-5"></div>
-                </div>
-                <div class="col text-center text-md-start d-none d-md-block"></div>
+    <div class="h-100 overflow-y-auto overflow-x-hidden d-flex flex-column">
+        <main class="flex-fill cprimary primary bg z-0 py-0 px-4 px-md-0 overflow-y-auto overflow-x-hidden position-relative" id="main-content">
+            <div class="h-100 w-100 overflow-hidden position-absolute d-none d-lg-block ignore-unshow z-n1">
+                <div data-follow="1" class="abs cir50px blur100px white overflow-hidden"></div>
             </div>
-        </div>
-        <div class="container h-100" id="about">
-            <div class="row align-items-center h-100">
-                <div class="col text-center text-md-start d-md-flex flex-md-row">
-                    <div>
-                        <h1 class="fw-bolder">About Page.</h1>
-                        <p>Here you'll find me talk about <a href="#myself">myself</a>, <a href="#myviews">my views</a>, artificial intelligence, and education.</p>
+            <div class="container h-100" id="home">
+                <div class="row align-items-center h-100 row-cols-1 row-cols-md-2">
+                    <div class="col text-center text-md-start d-md-flex flex-md-row">
+                        <div>
+                            <h1 class="fw-bolder">Hi, I'm dinnoyow.</h1>
+                            <p>I'm an artist and a developer, and you're now on my website. You can find my <a href="#about" onclick="show('about')">thoughts</a>, <a href="#gallery" onclick="show('gallery')">art and animations</a>, and <a href="#leafboard" onclick="show('leafboard')">projects</a> in this website.</p>
+                            <div class="social-medias d-flex justify-content-center justify-content-md-start"></div>
+                        </div>
+                        <div class="d-none d-md-block p-lg-5"></div>
                     </div>
-                    <div class="d-none d-md-block p-lg-5"></div>
-                </div>
-                <div class="col d-none d-md-block"></div>
-            </div>
-            <div class="primary bd-1px"></div>
-            <div id="myself" class="row align-items-center min-h-100">
-                <div class="col d-md-flex flex-md-row">
-                    <div>
-                        <div class="p-5"></div>
-                        <h1 class="fw-bolder">About me.</h1>
-                        <p>I'm an artist and developer interested in creating applications and games that have <b>value</b>. I'm inspired by and aspire to example <a href="https://www.valvesoftware.com" target="_blank">Valve's</a> philosophy at work.</p>
-                        <p>I'm Indonesian, grew up in Indonesia, and I've finished my high school degree. I'm currently gaining more skills in art, security, and programming.</p>
-                        <p>Besides academic studies, I've been self-taught in the pursuit of my interests, which gives me an important insight: There's always a way to make sense of anything, and what you need is to find your footing. Until you find it, curiosity is your teacher.</p>
-                        <p>I love music, manga, motion pictures, and video games. My main goal is to create works that will leave marks on people's minds.</p>
-                        <p><i>@dinnoyow</i> is a nickname I use for my internet-related activities and account usernames. It is used for anonymity.</p>
-                        <div class="social-medias d-flex justify-content-center justify-content-md-start"></div>
-                        <div class="p-5"></div>
-                    </div>
-                    <div class="d-none d-md-block p-lg-5"></div>
-                </div>
-                <div class="col d-none d-md-block"></div>
-            </div>
-            <div class="primary bd-1px"></div>
-            <div id="myviews" class="row align-items-center min-h-100">
-                <div class="col d-md-flex flex-md-row">
-                    <div>
-                        <div class="p-5"></div>
-                        <h1 class="fw-bolder">My views.</h1>
-                        <div class="p-5"></div>
-                    </div>
-                    <div class="d-none d-md-block p-lg-5"></div>
-                </div>
-                <div class="col d-none d-md-block"></div>
-            </div>
-        </div>
-        <div class="container h-100" id="gallery">
-            <div class="row align-items-center h-100">
-                <div class="col text-center text-md-start">
-                    <div>
-                        <h1 class="fw-bolder">Gallery.</h1>
-                        <p>This is a simple description about this testing website.</p>
-                    </div>
+                    <div class="col text-center text-md-start d-none d-md-block"></div>
                 </div>
             </div>
-        </div>
-        <div class="container h-100" id="leafboard">
-            <div class="row align-items-center h-100">
-                <div class="col text-center text-md-start">
-                    <div>
-                        <h1 class="fw-bolder">Leafboard.</h1>
-                        <p>This is a simple description about this testing website.</p>
+            <div class="container h-100" id="about">
+                <div class="row align-items-center h-100">
+                    <div class="col text-center text-md-start d-md-flex flex-md-row">
+                        <div>
+                            <h1 class="fw-bolder">About Page.</h1>
+                            <p>Here you'll find me talk about <a href="#myself">myself</a>, <a href="#myviews">my views</a>, artificial intelligence, and education.</p>
+                        </div>
+                        <div class="d-none d-md-block p-lg-5"></div>
+                    </div>
+                    <div class="col d-none d-md-block"></div>
+                </div>
+                <div class="primary bd-1px"></div>
+                <div id="myself" class="row align-items-center min-h-100">
+                    <div class="col d-md-flex flex-md-row">
+                        <div>
+                            <div class="p-5"></div>
+                            <h1 class="fw-bolder">About me.</h1>
+                            <p>I'm an artist and developer interested in creating applications and games that have <b>value</b>. I'm inspired by and aspire to example <a href="https://www.valvesoftware.com" target="_blank">Valve's</a> philosophy at work.</p>
+                            <p>I'm Indonesian, grew up in Indonesia, and I've finished my high school degree. I'm currently gaining more skills in art, security, and programming.</p>
+                            <p>Besides academic studies, I've been self-taught in the pursuit of my interests, which gives me an important insight: There's always a way to make sense of anything, and what you need is to find your footing. Until you find it, curiosity is your teacher.</p>
+                            <p>I love music, manga, motion pictures, and video games. My main goal is to create works that will leave marks on people's minds.</p>
+                            <p><i>@dinnoyow</i> is a nickname I use for my internet-related activities and account usernames. It is used for anonymity.</p>
+                            <div class="social-medias d-flex justify-content-center justify-content-md-start"></div>
+                            <div class="p-5"></div>
+                        </div>
+                        <div class="d-none d-md-block p-lg-5"></div>
+                    </div>
+                    <div class="col d-none d-md-block"></div>
+                </div>
+                <div class="primary bd-1px"></div>
+                <div id="myviews" class="row align-items-center min-h-100">
+                    <div class="col d-md-flex flex-md-row">
+                        <div>
+                            <div class="p-5"></div>
+                            <h1 class="fw-bolder">My views.</h1>
+                            <div class="p-5"></div>
+                        </div>
+                        <div class="d-none d-md-block p-lg-5"></div>
+                    </div>
+                    <div class="col d-none d-md-block"></div>
+                </div>
+            </div>
+            <div class="container h-100" id="gallery">
+                <div class="row align-items-center h-100">
+                    <div class="col text-center text-md-start">
+                        <div>
+                            <h1 class="fw-bolder">Gallery.</h1>
+                            <p>This is a simple description about this testing website.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container h-100" id="grinders-forge">
-            <div class="row align-items-center h-100">
-                <div class="col text-center text-md-start">
-                    <div>
-                        <h1 class="fw-bolder">Grinders Forge.</h1>
-                        <p>This is a simple description about this testing website.</p>
+            <div class="container h-100" id="leafboard">
+                <div class="row align-items-center h-100">
+                    <div class="col text-center text-md-start">
+                        <div>
+                            <h1 class="fw-bolder">Leafboard.</h1>
+                            <p>This is a simple description about this testing website.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container h-100" id="bijou-may-cry">
-            <div class="row align-items-center h-100">
-                <div class="col text-center text-md-start">
-                    <div>
-                        <h1 class="fw-bolder">Bijou May Cry.</h1>
-                        <p>This is a simple description about this testing website.</p>
+            <div class="container h-100" id="grinders-forge">
+                <div class="row align-items-center h-100">
+                    <div class="col text-center text-md-start">
+                        <div>
+                            <h1 class="fw-bolder">Grinders Forge.</h1>
+                            <p>This is a simple description about this testing website.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
-    <footer class="secondary bg bd-top-1px user-select-none position-static z-1">
-        <div class="h-100 w-100 overflow-hidden position-absolute d-none d-lg-block z-0">
-            <div data-follow="1" class="abs cir300px blur300px white-25"></div>
-        </div>
-        <div class="container py-4 position-relative z-1">
-            <div class="row">
-                <div class="col text-start text-secondary d-flex flex-row align-items-center justify-content-start">
-                    <span class="small d-none d-md-block p-1 text-shadow-1">Coded with:</span>
-                    <span class="p-1 d-block d-md-none bi bi-code-slash"></span>
-                    <a href="https://getbootstrap.com/" target="_blank" class="p-1 text-secondary"><span class="bi bi-bootstrap-fill"></span></a>
-                    <span class="small text-shadow-1">,</span>
-                    <a 
-                        href="https://jwanner83.github.io/follow-js/index.html" target="_blank"
-                        class="text-secondary text-decoration-none small p-1 text-shadow-1"
-                        style="transform: translatey(-1px);"
-                        >
-                        sass
-                    </a>
-                    <span class="small text-shadow-1">, &</span>
-                    <a 
-                        href="https://jwanner83.github.io/follow-js/index.html" target="_blank"
-                        class="text-secondary text-decoration-none small p-1 text-shadow-1"
-                        style="transform: translatey(-1px);"
-                        >
-                        follow.js
-                    </a>
-                </div>
-                <div class="col text-end text-secondary d-flex flex-row align-items-center justify-content-end social-medias">
+            <div class="container h-100" id="bijou-may-cry">
+                <div class="row align-items-center h-100">
+                    <div class="col text-center text-md-start">
+                        <div>
+                            <h1 class="fw-bolder">Bijou May Cry.</h1>
+                            <p>This is a simple description about this testing website.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </main>
+        <footer class="secondary bg bd-top-1px user-select-none position-relative z-1">
+            <div class="h-100 w-100 overflow-hidden position-absolute d-none d-lg-block z-0">
+                <div data-follow="1" class="abs cir300px blur300px white-25"></div>
+            </div>
+            <div class="container py-4 position-relative z-1">
+                <div class="row">
+                    <div class="col text-start text-secondary d-flex flex-row align-items-center justify-content-start">
+                        <span class="small d-none d-md-block p-1 text-shadow-1">Coded with:</span>
+                        <span class="p-1 d-block d-md-none bi bi-code-slash"></span>
+                        <a href="https://getbootstrap.com/" target="_blank" class="p-1 text-secondary"><span class="bi bi-bootstrap-fill"></span></a>
+                        <span class="small text-shadow-1">,</span>
+                        <a 
+                            href="https://jwanner83.github.io/follow-js/index.html" target="_blank"
+                            class="text-secondary text-decoration-none small p-1 text-shadow-1"
+                            style="transform: translatey(-1px);"
+                            >
+                            sass
+                        </a>
+                        <span class="small text-shadow-1">, &</span>
+                        <a 
+                            href="https://jwanner83.github.io/follow-js/index.html" target="_blank"
+                            class="text-secondary text-decoration-none small p-1 text-shadow-1"
+                            style="transform: translatey(-1px);"
+                            >
+                            follow.js
+                        </a>
+                    </div>
+                    <div class="col text-end text-secondary d-flex flex-row align-items-center justify-content-end social-medias">
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
     <div id="clipboard-alert" class="modal fade" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content primary bg bd-1px">
