Update the contents of about me page

--- a/index.html
+++ b/index.html
@@ -55,11 +55,7 @@
             </nav>
         </div>
     </header>
-    <div id="top"></div>
     <main class="flex-fill cprimary primary bg z-0 py-0 px-4 px-md-0 overflow-y-auto overflow-x-hidden position-relative" id="main-content">
-        <div class="h-100 w-100 overflow-hidden position-absolute d-none d-lg-block ignore-unshow z-n1">
-            <div data-follow="1" class="abs cir50px blur100px white overflow-hidden"></div>
-        </div>
         <div class="container h-100" id="home">
             <div class="row align-items-center h-100 row-cols-1 row-cols-md-2">
                 <div class="col text-center text-md-start d-md-flex flex-md-row">
@@ -78,7 +74,7 @@
                 <div class="col text-center text-md-start d-md-flex flex-md-row">
                     <div>
                         <h1 class="fw-bolder">About Page.</h1>
-                        <p>Here you'll find me talk about <a href="#myself">myself</a>, <a href="#myviews">my views</a>, artificial intelligence, and education.</p>
+                        <p>Here you'll find me talk about <a href="#myself">myself</a>, <a href="#ai">artificial intelligence</a>, and education.</p>
                     </div>
                     <div class="d-none d-md-block p-lg-5"></div>
                 </div>
@@ -86,9 +82,9 @@
             </div>
             <div class="primary bd-1px"></div>
             <div id="myself" class="row align-items-center min-h-100">
+                <div class="p-5 p-lg-4 w-100"></div>
                 <div class="col d-md-flex flex-md-row">
                     <div>
-                        <div class="p-5"></div>
                         <h1 class="fw-bolder">About me.</h1>
                         <p>I'm an artist and developer interested in creating applications and games that have <b>value</b>. I'm inspired by and aspire to example <a href="https://www.valvesoftware.com" target="_blank">Valve's</a> philosophy at work.</p>
                         <p>I'm Indonesian, grew up in Indonesia, and I've finished my high school degree. I'm currently gaining more skills in art, security, and programming.</p>
@@ -96,23 +92,53 @@
                         <p>I love music, manga, motion pictures, and video games. My main goal is to create works that will leave marks on people's minds.</p>
                         <p><i>@dinnoyow</i> is a nickname I use for my internet-related activities and account usernames. It is used for anonymity.</p>
                         <div class="social-medias d-flex justify-content-center justify-content-md-start"></div>
-                        <div class="p-5"></div>
                     </div>
                     <div class="d-none d-md-block p-lg-5"></div>
                 </div>
                 <div class="col d-none d-md-block"></div>
+                <div class="p-5 p-lg-4 w-100"></div>
             </div>
             <div class="primary bd-1px"></div>
-            <div id="myviews" class="row align-items-center min-h-100">
+            <div id="ai" class="row row-cols-1 row-cols-md-2 align-items-start min-h-100">
+                <div class="p-5 p-lg-4 w-100"></div>
                 <div class="col d-md-flex flex-md-row">
                     <div>
-                        <div class="p-5"></div>
-                        <h1 class="fw-bolder">My views.</h1>
-                        <div class="p-5"></div>
+                        <h1 class="fw-bolder">Artificial Intelligence.</h1>
+                        <p>Artifical intelligence in this discussion refers to the machine learning and data prediction programs, either from text, sound, image, or video.</p>
+                        <div class="py-3"></div>
+
+                        <h2>The Good.</h2>
+                        <p>Artificial intelligence is a really good teacher. It can elaborate, simplify, and provide relatively concrete guidance on a well known general or specific topics, which is really helpful for studying efficiently.</p> 
+
+                        <p>One of the hurdles of self-taught studying is shifting through the internet for answers. Often times, it requires 20 to 30 clicks to finally get a good enough picture for complicated topics. AI speeds up the process to 2 to 6 clicks for most topics.</p>  
+
+                        <p>It helps identify and explain term confusions that is surprisingly common in a lot of study fields. It is capable to provide possible outcome(s) when given a scenario. Sometimes, it points out missing context, which is really helpful to understand concept that build on top of another concept. Certain models that provides citation links makes it easier to confirm the AI's response.</p>
+
+                        <p>Overall, it is by far the best way to start getting into a new field of study.</p>
+                        <div class="py-3"></div>
+                        
+                        <h2>The Bad.</h2>
+                        <p>At the current time of writing, <a href="https://www.iea.org/reports/electricity-2024/executive-summary">AI costs a considerable amount of energy</a>, prone to hallucinations on not-so-well-known topics, <a href="https://arxiv.org/abs/2509.10970" target="_blank">potentially causing AI psychosis</a>, legal and ownership issues regarding data training on copyrighted contents, as well as high incentive for AI adoption which leads to invasive technologies.</p>
                     </div>
                     <div class="d-none d-md-block p-lg-5"></div>
                 </div>
-                <div class="col d-none d-md-block"></div>
+                <div class="col d-md-flex flex-md-row">
+                    <div>
+                        <p>Content generating AIs are making it easy for misinformation to spread, ranging from deepfakes to text-video generation. Distinguishing what is real and fake is becoming difficult, which might cause photo, audio, or video evidences to be redundant in the near future.</p>
+
+                        <p>The development of AI has been growing with a lack of regulation, thanks to the significant difference of speed between law implementation and AI growth.</p>
+                        <div class="py-3"></div>
+
+                        <h2>More Opinions.</h2>
+                        <p>Personally, I think AI technology is being valued more than it should be. The cost of running one financially is currently at a loss, and its success at finally becoming profitable depends on the public image of AI, rather than its genuine value.</p>
+
+                        <p>On programming, I think <a href="https://en.wikipedia.org/wiki/Linus_Torvalds" target="_blank">Linus</a> said it best on <a href="https://youtu.be/tWx769t1JKg?t=1140">this video</a>. AI or vibe coding can be a gateway for new programmers to have easier access to learn and practice programming and computer science. It might not be productive for seasoned programmers due to their hallucination issues and heavier amount of debugging, but it's a really good guide for those who are new to the space.</p>
+
+                        <p>I don't think AI Artists exists. The current AI arts are made by AI commissioners. Despite how they are proving that it requires technicality and expertise in using AI models, their workflow is more like commissioners that commissions various different AIs to generate or enhance specific parts of an AI generated picture. The artist is the AI, and the AI commissioners are just commissioning the AI.</p>
+                    </div>
+                    <div class="d-none d-md-block p-lg-5"></div>
+                </div>
+                <div class="p-5 p-lg-4 w-100"></div>
             </div>
         </div>
         <div class="container h-100" id="gallery">
