--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <div class="py-3"></div>
                         
                         <h2>The Bad.</h2>
-                        <p>At the current time of writing, <a href="https://www.iea.org/reports/electricity-2024/executive-summary">AI costs a considerable amount of energy</a>, prone to hallucinations on not-so-well-known topics, <a href="https://arxiv.org/abs/2509.10970" target="_blank">potentially causing AI psychosis</a>, legal and ownership issues regarding data training on copyrighted contents, as well as high incentive for AI adoption which leads to invasive technologies.</p>
+                        <p>At the current time of writing, <a href="https://www.iea.org/reports/electricity-2024/executive-summary" target="_blank">AI costs a considerable amount of energy</a>, prone to hallucinations on not-so-well-known topics, <a href="https://arxiv.org/abs/2509.10970" target="_blank">potentially causing AI psychosis</a>, legal and ownership issues regarding data training on copyrighted contents, as well as high incentive for AI adoption which leads to invasive technologies.</p>
                     </div>
                     <div class="d-none d-md-block p-lg-5"></div>
                 </div>
@@ -132,7 +132,7 @@
                         <h2>More Opinions.</h2>
                         <p>Personally, I think AI technology is being valued more than it should be. The cost of running one financially is currently at a loss, and its success at finally becoming profitable depends on the public image of AI, rather than its genuine value.</p>
 
-                        <p>On programming, I think <a href="https://en.wikipedia.org/wiki/Linus_Torvalds" target="_blank">Linus</a> said it best on <a href="https://youtu.be/tWx769t1JKg?t=1140">this video</a>. AI or vibe coding can be a gateway for new programmers to have easier access to learn and practice programming and computer science. It might not be productive for seasoned programmers due to their hallucination issues and heavier amount of debugging, but it's a really good guide for those who are new to the space.</p>
+                        <p>On programming, I think <a href="https://en.wikipedia.org/wiki/Linus_Torvalds" target="_blank">Linus</a> said it best on <a href="https://youtu.be/tWx769t1JKg?t=1140" target="_blank">this video</a>. AI or vibe coding can be a gateway for new programmers to have easier access to learn and practice programming and computer science. It might not be productive for seasoned programmers due to their hallucination issues and heavier amount of debugging, but it's a really good guide for those who are new to the space.</p>
 
                         <p>I don't think AI Artists exists. The current AI arts are made by AI commissioners. Despite how they are proving that it requires technicality and expertise in using AI models, their workflow is more like commissioners that commissions various different AIs to generate or enhance specific parts of an AI generated picture. The artist is the AI, and the AI commissioners are just commissioning the AI.</p>
                     </div>
