--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="container py-2 text-center text-md-start">
             <nav class="navbar navbar-expand-md justify-content-center justify-content-md-start">
-                <a href="#" class="navbar-brand" onclick="show('home')">
+                <a href="#home" class="navbar-brand" onclick="show('home')">
                     <img src="assets/logo-signature.png" alt="dinnoyow signature logo" style="width: 2em;">
                 </a>
                 <a 
